few more recursion & bit manipulation problems added

--- a/Algorithms/recursion/string_recursion.ipynb
+++ b/Algorithms/recursion/string_recursion.ipynb
@@ -275,7 +275,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def longest_palindromic_subsequence(string):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
@@ -293,17 +296,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def binary_string_formation(string):    \n",
+    "#     arr=[]\n",
+    "    count=''\n",
+    "    for i in range(len(string)):\n",
+    "        if string[i]=='?':\n",
+    "            count+='1'\n",
+    "    length_count=len(count)\n",
+    "    arr=[(length_count-len(bin(i)[2:]))*\"0\"+bin(i)[2:] for i in range(int(count,2)+1)]\n",
+    "\n",
+    "    for i in range(len(arr)):\n",
+    "        c=''\n",
+    "        x=0\n",
+    "        for j in range(len(string)):\n",
+    "            if string[j]=='?':\n",
+    "                c+=arr[i][x]\n",
+    "                x+=1\n",
+    "            else:\n",
+    "                c+=string[j]\n",
+    "        print(c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1010\n",
+      "1011\n",
+      "1110\n",
+      "1111\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=\"1?1?\"\n",
+    "binary_string_formation(string)"
+   ]
   }
  ],
  "metadata": {
