--- a/Algorithms/bitmanipulation/bitmanipulation.ipynb
+++ b/Algorithms/bitmanipulation/bitmanipulation.ipynb
@@ -321,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "0\n"
      ]
     }
    ],
@@ -336,6 +336,79 @@
     "def change_ith_bit(num,i):\n",
     "    return num^(1<<i)\n",
     "print(change_ith_bit(5,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Playing With Bits........"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_bits_in_given_range(a,b):\n",
+    "    while a<=b:\n",
+    "        count=0\n",
+    "        while a>0:\n",
+    "            if (a&1)==1:\n",
+    "                count+=1\n",
+    "            a=a>>1\n",
+    "        print(a,count)\n",
+    "        a+=1\n",
+    "\n",
+    "count_bits_in_given_range(10,15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find the two non-repeating elements in an array of repeating elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_non_repeating_elements(arr):\n",
+    "    x=arr[0]\n",
+    "    res1=0\n",
+    "    res2=0\n",
+    "    set_bit_no=0\n",
+    "    for i in range(1,len(arr)):\n",
+    "        x^=arr[i]\n",
+    "    set_bit_no=x&(~(x-1))\n",
+    "    for i in arr:\n",
+    "        if i&set_bit_no:\n",
+    "            res1=i^set_bit_no\n",
+    "        else:\n",
+    "            res2=i^set_bit_no\n",
+    "    print(res1,res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[2, 3, 7, 9, 11, 2, 3, 11]\n",
+    "two_non_repeating_elements(arr)"
    ]
   }
  ],
