--- a/Algorithms/recursion/string_recursion.ipynb
+++ b/Algorithms/recursion/string_recursion.ipynb
@@ -134,35 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sub_sequence(string,count=0,x=1,y=2,z=len(string)-1):\n",
-    "    \n",
-    "    if count==len(string)-1:\n",
-    "        return\n",
-    "    \n",
-    "    if y==len(string)-1:\n",
-    "        print(string[count]+string[x]+string[z:])\n",
-    "        z-=1\n",
-    "    else:\n",
-    "#         print(string[count]+string[x])\n",
-    "        print(string[count:y+1])\n",
-    "        y+=1\n",
-    "    if x+1==y:\n",
-    "        print(string[count]+string[x])\n",
-    "        print(string[count:y+1])\n",
-    "        x+=1\n",
-    "        y=x+1\n",
-    "        z=len(string)-1\n",
-    "\n",
-    "    sub_sequence(string,count,x,y,z)"
+    "def sub_sequence(string,):\n",
+    "    pass\n",
+    "#     sub_sequence(string,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# sub_sequence(string,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -171,46 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ab,abd,abcd,ab,acd,ac,ad,a,bcd,bc,bd,b,cdd,cd,c,"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-3e2913fab03c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"abcd\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\"\"\"a,ab,ac,ad,abc,abd,acd,abcd,b,bcd,bd,bc,c,cd,d\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msubsequences_of_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-80-cb3b05b23314>\u001b[0m in \u001b[0;36msubsequences_of_string\u001b[0;34m(string, count, x, y)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0my\u001b[0m\u001b[0;34m-=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the string to generate the Sub-Sequence: abc\n",
-      "1\n",
-      "10\n",
-      "11\n",
-      "100\n",
-      "101\n",
-      "110\n"
+      "Enter the string to generate the Sub-Sequence: bbabcbcab\n",
+      "2nd ['b', 'b', 'bb', 'a', 'ba', 'ba', 'bba', 'b', 'bb', 'bb', 'bbb', 'ab', 'bab', 'bab', 'bbab', 'c', 'bc', 'bc', 'bbc', 'ac', 'bac', 'bac', 'bbac', 'bc', 'bbc', 'bbc', 'bbbc', 'abc', 'babc', 'babc', 'bbabc', 'b', 'bb', 'bb', 'bbb', 'ab', 'bab', 'bab', 'bbab', 'bb', 'bbb', 'bbb', 'bbbb', 'abb', 'babb', 'babb', 'bbabb', 'cb', 'bcb', 'bcb', 'bbcb', 'acb', 'bacb', 'bacb', 'bbacb', 'bcb', 'bbcb', 'bbcb', 'bbbcb', 'abcb', 'babcb', 'babcb', 'bbabcb', 'c', 'bc', 'bc', 'bbc', 'ac', 'bac', 'bac', 'bbac', 'bc', 'bbc', 'bbc', 'bbbc', 'abc', 'babc', 'babc', 'bbabc', 'cc', 'bcc', 'bcc', 'bbcc', 'acc', 'bacc', 'bacc', 'bbacc', 'bcc', 'bbcc', 'bbcc', 'bbbcc', 'abcc', 'babcc', 'babcc', 'bbabcc', 'bc', 'bbc', 'bbc', 'bbbc', 'abc', 'babc', 'babc', 'bbabc', 'bbc', 'bbbc', 'bbbc', 'bbbbc', 'abbc', 'babbc', 'babbc', 'bbabbc', 'cbc', 'bcbc', 'bcbc', 'bbcbc', 'acbc', 'bacbc', 'bacbc', 'bbacbc', 'bcbc', 'bbcbc', 'bbcbc', 'bbbcbc', 'abcbc', 'babcbc', 'babcbc', 'bbabcbc', 'a', 'ba', 'ba', 'bba', 'aa', 'baa', 'baa', 'bbaa', 'ba', 'bba', 'bba', 'bbba', 'aba', 'baba', 'baba', 'bbaba', 'ca', 'bca', 'bca', 'bbca', 'aca', 'baca', 'baca', 'bbaca', 'bca', 'bbca', 'bbca', 'bbbca', 'abca', 'babca', 'babca', 'bbabca', 'ba', 'bba', 'bba', 'bbba', 'aba', 'baba', 'baba', 'bbaba', 'bba', 'bbba', 'bbba', 'bbbba', 'abba', 'babba', 'babba', 'bbabba', 'cba', 'bcba', 'bcba', 'bbcba', 'acba', 'bacba', 'bacba', 'bbacba', 'bcba', 'bbcba', 'bbcba', 'bbbcba', 'abcba', 'babcba', 'babcba', 'bbabcba', 'ca', 'bca', 'bca', 'bbca', 'aca', 'baca', 'baca', 'bbaca', 'bca', 'bbca', 'bbca', 'bbbca', 'abca', 'babca', 'babca', 'bbabca', 'cca', 'bcca', 'bcca', 'bbcca', 'acca', 'bacca', 'bacca', 'bbacca', 'bcca', 'bbcca', 'bbcca', 'bbbcca', 'abcca', 'babcca', 'babcca', 'bbabcca', 'bca', 'bbca', 'bbca', 'bbbca', 'abca', 'babca', 'babca', 'bbabca', 'bbca', 'bbbca', 'bbbca', 'bbbbca', 'abbca', 'babbca', 'babbca', 'bbabbca', 'cbca', 'bcbca', 'bcbca', 'bbcbca', 'acbca', 'bacbca', 'bacbca', 'bbacbca', 'bcbca', 'bbcbca', 'bbcbca', 'bbbcbca', 'abcbca', 'babcbca', 'babcbca', 'bbabcbca', 'b', 'bb', 'bb', 'bbb', 'ab', 'bab', 'bab', 'bbab', 'bb', 'bbb', 'bbb', 'bbbb', 'abb', 'babb', 'babb', 'bbabb', 'cb', 'bcb', 'bcb', 'bbcb', 'acb', 'bacb', 'bacb', 'bbacb', 'bcb', 'bbcb', 'bbcb', 'bbbcb', 'abcb', 'babcb', 'babcb', 'bbabcb', 'bb', 'bbb', 'bbb', 'bbbb', 'abb', 'babb', 'babb', 'bbabb', 'bbb', 'bbbb', 'bbbb', 'bbbbb', 'abbb', 'babbb', 'babbb', 'bbabbb', 'cbb', 'bcbb', 'bcbb', 'bbcbb', 'acbb', 'bacbb', 'bacbb', 'bbacbb', 'bcbb', 'bbcbb', 'bbcbb', 'bbbcbb', 'abcbb', 'babcbb', 'babcbb', 'bbabcbb', 'cb', 'bcb', 'bcb', 'bbcb', 'acb', 'bacb', 'bacb', 'bbacb', 'bcb', 'bbcb', 'bbcb', 'bbbcb', 'abcb', 'babcb', 'babcb', 'bbabcb', 'ccb', 'bccb', 'bccb', 'bbccb', 'accb', 'baccb', 'baccb', 'bbaccb', 'bccb', 'bbccb', 'bbccb', 'bbbccb', 'abccb', 'babccb', 'babccb', 'bbabccb', 'bcb', 'bbcb', 'bbcb', 'bbbcb', 'abcb', 'babcb', 'babcb', 'bbabcb', 'bbcb', 'bbbcb', 'bbbcb', 'bbbbcb', 'abbcb', 'babbcb', 'babbcb', 'bbabbcb', 'cbcb', 'bcbcb', 'bcbcb', 'bbcbcb', 'acbcb', 'bacbcb', 'bacbcb', 'bbacbcb', 'bcbcb', 'bbcbcb', 'bbcbcb', 'bbbcbcb', 'abcbcb', 'babcbcb', 'babcbcb', 'bbabcbcb', 'ab', 'bab', 'bab', 'bbab', 'aab', 'baab', 'baab', 'bbaab', 'bab', 'bbab', 'bbab', 'bbbab', 'abab', 'babab', 'babab', 'bbabab', 'cab', 'bcab', 'bcab', 'bbcab', 'acab', 'bacab', 'bacab', 'bbacab', 'bcab', 'bbcab', 'bbcab', 'bbbcab', 'abcab', 'babcab', 'babcab', 'bbabcab', 'bab', 'bbab', 'bbab', 'bbbab', 'abab', 'babab', 'babab', 'bbabab', 'bbab', 'bbbab', 'bbbab', 'bbbbab', 'abbab', 'babbab', 'babbab', 'bbabbab', 'cbab', 'bcbab', 'bcbab', 'bbcbab', 'acbab', 'bacbab', 'bacbab', 'bbacbab', 'bcbab', 'bbcbab', 'bbcbab', 'bbbcbab', 'abcbab', 'babcbab', 'babcbab', 'bbabcbab', 'cab', 'bcab', 'bcab', 'bbcab', 'acab', 'bacab', 'bacab', 'bbacab', 'bcab', 'bbcab', 'bbcab', 'bbbcab', 'abcab', 'babcab', 'babcab', 'bbabcab', 'ccab', 'bccab', 'bccab', 'bbccab', 'accab', 'baccab', 'baccab', 'bbaccab', 'bccab', 'bbccab', 'bbccab', 'bbbccab', 'abccab', 'babccab', 'babccab', 'bbabccab', 'bcab', 'bbcab', 'bbcab', 'bbbcab', 'abcab', 'babcab', 'babcab', 'bbabcab', 'bbcab', 'bbbcab', 'bbbcab', 'bbbbcab', 'abbcab', 'babbcab', 'babbcab', 'bbabbcab', 'cbcab', 'bcbcab', 'bcbcab', 'bbcbcab', 'acbcab', 'bacbcab', 'bacbcab', 'bbacbcab', 'bcbcab', 'bbcbcab', 'bbcbcab', 'bbbcbcab', 'abcbcab', 'babcbcab', 'babcbcab', 'bbabcbcab']\n"
      ]
     }
    ],
@@ -247,14 +203,14 @@
     "            arr2.append(s)\n",
     "        else:\n",
     "            temp=bin(i)[2:]\n",
-    "            print(temp)\n",
-    "#             temp=bin(i)[2:][::-1]\n",
+    "#             print(temp)\n",
+    "            temp=bin(i)[2:][::-1]\n",
     "            x=''\n",
     "            for i in range(len(temp)):\n",
     "                if temp[i]=='1':\n",
     "                    x+=s[i]\n",
     "            arr2.append(x)\n",
-    "#     print(\"2nd\",arr2)\n",
+    "    print(\"2nd\",arr2)\n",
     "    \n",
     "##Calling the method\n",
     "s=input(\"Enter the string to generate the Sub-Sequence: \")\n",
@@ -272,20 +228,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def longest_palindromic_subsequence(string):\n",
-    "    pass"
+    "def longest_palindromic_subsequence(string,length=0):\n",
+    "    if len(string)==length:\n",
+    "        return\n",
+    "    \n",
+    "    longest_palindromic_subsequence(string,length+1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string to find the Palindromic Sub-Sequence: abcd\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from collections import default_dict\n",
+    "def longest_palindromic_subsequence2(s):\n",
+    "#     arr2=default_dict()\n",
+    "    check=0\n",
+    "    for i in range(1,(2**length)):\n",
+    "        temp=bin(i)[2:]\n",
+    "#         print(temp)\n",
+    "        temp=bin(i)[2:][::-1]\n",
+    "        x=''\n",
+    "        for i in range(len(temp)):\n",
+    "            if temp[i]=='1':\n",
+    "                x+=s[i]\n",
+    "        if x==\"\".join(reversed(x)):\n",
+    "            if check<len(x):\n",
+    "                check=len(x)\n",
+    "    print(check)\n",
+    "    \n",
+    "##Calling the method\n",
+    "string=input(\"Enter the string to find the Palindromic Sub-Sequence: \")\n",
+    "length=len(string)\n",
+    "longest_palindromic_subsequence2(string)"
+   ]
   },
   {
    "cell_type": "markdown",
