started solving liked lists questions as a part of DS part

--- a/DataStructure/array/array.ipynb
+++ b/DataStructure/array/array.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,28 +62,26 @@
     "            else:\n",
     "                i+=1 \n",
     "        except:\n",
-    "            print(i)\n",
     "            break\n",
     "    print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the elements of the array:1 1 2\n",
-      "[1, 2]\n"
+      "[0, 1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "arr=list(map(lambda x:int(x),input(\"Enter the elements of the array:\").split()))\n",
-    "# arr=[0,0,1,1,1,2,2,3,3,4]\n",
+    "# arr=list(map(lambda x:int(x),input(\"Enter the elements of the array:\").split()))\n",
+    "arr=[0,0,1,1,1,2,2,3,3,4]\n",
     "length=len(arr)\n",
     "remove_duplicates(arr,length)"
    ]
@@ -131,58 +129,248 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Sort an array of 0’s 1’s 2’s without using extra space or sorting algo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sort_012_array(arr):\n",
+    "    \"\"\"\n",
+    "        Traversing the array from start to end...\n",
+    "    \"\"\"\n",
+    "    i=0\n",
+    "    counter=0\n",
+    "    length=len(arr)\n",
+    "    while i<length:\n",
+    "        if counter==length:\n",
+    "            break\n",
+    "        if arr[i]==0:\n",
+    "            arr.insert(0,arr.pop(i))\n",
+    "            counter+=1\n",
+    "            i+=1\n",
+    "        elif arr[i]==2:\n",
+    "            arr.append(arr.pop(i))\n",
+    "            counter+=1\n",
+    "        else:\n",
+    "            i+=1\n",
+    "            counter+=1\n",
+    "    print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 2, 2: 2} {2: 2}\n",
-      "[2, 2]\n"
+      "[0, 0, 0, 0, 0, 1, 1, 2, 2]\n"
      ]
     }
    ],
    "source": [
-    "class Solution:\n",
-    "    def intersect(self, nums1, nums2):\n",
-    "        dict1 = {}\n",
-    "        dict2 = {}\n",
-    "        result = []\n",
-    "        for num in nums1:\n",
-    "            if num not in dict1:\n",
-    "                dict1[num] = 1\n",
-    "            else:\n",
-    "                dict1[num] += 1\n",
-    "        for num in nums2:\n",
-    "            if num not in dict2:\n",
-    "                dict2[num] = 1\n",
-    "            else:\n",
-    "                dict2[num] += 1\n",
-    "        print(dict1,dict2)\n",
-    "        for k in dict1:\n",
-    "            if k in dict2:\n",
-    "                for i in range(min(dict1[k], dict2[k])):\n",
-    "                    result.append(k)\n",
-    "        \n",
-    "        return result\n",
-    "print(Solution().intersect([1,2,2,1],[2,2]))"
+    "arr=[0,1,0,0,0,1,2,2,0]\n",
+    "sort_012_array(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge two sorted arrays with O(1) extra space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_two_sorted_array(nums1,nums2,nums1_len,nums2_len):\n",
+    "    if nums1_len>nums2_len:\n",
+    "        i=0\n",
+    "        while i<len(nums1):\n",
+    "            if len(nums2)!=0:\n",
+    "                if nums1[i]>=nums2[0]:\n",
+    "                    nums1.insert(i,nums2.pop(0))\n",
+    "            else:\n",
+    "                break\n",
+    "            i+=1\n",
+    "        if len(nums2)!=0:\n",
+    "            nums1=nums1+nums2\n",
+    "        nums2=nums1[nums1_len:]\n",
+    "        nums1=nums1[:nums1_len]\n",
+    "        print(nums1)\n",
+    "        print(nums2)        \n",
+    "       \n",
+    "    else:\n",
+    "        i=0\n",
+    "        while i<len(nums2):\n",
+    "            if len(nums1)!=0:\n",
+    "                if nums2[i]>=nums1[0]:\n",
+    "                    nums2.insert(i,nums1.pop(0))\n",
+    "            else:\n",
+    "                break\n",
+    "            i+=1\n",
+    "        if len(nums1)!=0:\n",
+    "            nums2=nums2+nums1\n",
+    "        nums1=nums2[:nums1_len]\n",
+    "        nums2=nums2[nums1_len:]\n",
+    "        print(nums1)\n",
+    "        print(nums2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]\n",
+      "[3, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums1=[10]\n",
+    "nums2=[2,3]\n",
+    "nums1_len=len(nums1)\n",
+    "nums2_len=len(nums2)\n",
+    "merge_two_sorted_array(nums1,nums2,nums1_len,nums2_len)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kadane’s Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contigious_sub_array_sum(arr):\n",
+    "    i=0\n",
+    "    current_max=0\n",
+    "    max_sum=0\n",
+    "    while i<len(arr):\n",
+    "        current_max=max(arr[i],arr[i]+current_max)\n",
+    "        max_sum=max(max_sum,current_max)\n",
+    "        i+=1\n",
+    "    return max_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=[1,-8,12,0,-3,5,-9,4]\n",
+    "contigious_sub_array_sum(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge Overlapping Subintervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Two Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "def twoSum(nums,target):\n",
+    "    hashMap=defaultdict()\n",
+    "    for i in range(len(nums)):\n",
+    "        hashMap[target-nums[i]]=i\n",
+    "    print(hashMap)\n",
+    "    for i in range(len(nums)):\n",
+    "        if hashMap.__contains__(target-(target-nums[i])):\n",
+    "            if i!=hashMap[target-(target-nums[i])]:\n",
+    "                print(i,hashMap[target-(target-nums[i])])\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(None, {10: 1, -19: 2, -15: 3})\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums=[-10,-10,19,15]\n",
+    "# nums=[3,2,4]\n",
+    "target=0\n",
+    "twoSum(nums,target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
